wwr/styles/rafting.css
@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap");

:root {
    --primary-color: #48639c;
    --secondary-color: #0a090c;
    --accent1-color: #626d58;
    --accent2-color: #62bec1;
    --heading-font: "Poppins", serif;
    --paragraph-font: "Poppins", serif;
    --nav-background-color: var(--secondary-color);
    --nav-link-color: var(--accent2-color);
    --nav-hover-link-color: var(--secondary-color);
    --nav-hover-background-color: var(--accent2-color);
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

h1,
h2,
h3,
h4,
h5,
h6 {
    font-family: var(--heading-font);
    color: var(--accent1-color);
}

a {
    text-decoration: none;
}

body {
    font-family: var(--paragraph-font);
    max-width: 960px;
    /* padding: 20px; */
    margin: 0 auto;
}

header {
    display: grid;
    grid-template-columns: 3fr 4fr;
    align-items: center;
    justify-items: center;
    padding: 24px 0;
}

header img {
    max-width: 100px;
}

nav {
    font-size: 1.2rem;
    display: flex;
    justify-content: center;
    gap: 30px;
}

section {
    padding: 2rem;
    margin: 1rem 0;
}

.hero {
    position: relative;
    text-align: center;
}

.hero img {
    display: block;
    width: 100%;
    height: auto;
}

.hero h1,
.hero article {
    position: absolute;
}

.hero h1 {
    top: 0;
    width: 100%;
    background-color: rgba(0, 0, 0, 0.5);
    margin: 0;
    padding: 1rem;
}

.hero article {
    top: 5rem;
    background-color: rgba(255, 255, 255, 0.7);
    margin: 2rem;
    padding: 1rem;
}

.hero article img {
    float: right;
    width: 180px;
    margin-left: 1rem;
}

.history h2 {
    text-align: center;
    margin-bottom: 1rem;
}

.history div {
    display: flex;
    justify-content: center;
    gap: 24px;
}

.adventures {
    display: grid;
    gap: 1rem;
}

.adventures h2 {
    text-align: center;
    grid-column: 1 / 6;
}

.adventures figure {
    grid-row: 2 / 3;
}

.adventures figure img {
    width: 100%;
    height: 150px;
    object-fit: cover;
}

/* Contact */
.contact h1 {
    text-align: center;
}

.contact .team {
    text-align: center;
    display: flex;
    flex-direction: column;
    gap: 24px;
}

.contact .team div {
    display: flex;
    gap: 24px;
}

.contact .team img {
    max-width: 300px;
    width: 100%;
}

.contact .contact-us {
    display: flex;
    flex-direction: column;
    gap: 24px;
    align-items: center;
}

.contact .contact-us h2 {
    text-align: center;
}

.contact .contact-us form {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 2rem;
}

.contact .contact-us form .inputs {
    display: flex;
    gap: 2rem;
    justify-content: center;
}

.contact .contact-us form .inputs .col1 {
    display: flex;
    flex-direction: column;
    gap: 1rem;
    flex-grow: 1;
    max-width: 50%;
}

.contact .col1 > label:nth-child(1),
.contact .col1 > label:nth-child(2) {
    display: flex;
    flex-direction: column;
}

.contact .col1 .radio-buttons {
    display: flex;
    flex-direction: column;
}

.contact .contact-us form .inputs .col2 {
    flex-grow: 1;
}

.contact .col2 label {
    display: flex;
    flex-direction: column;
}

.contact input[type="text"],
.contact input[type="email"] {
    border-radius: 5px;
    border: 1px solid #bebebe;
    padding: .5rem;
    font-size: 1rem;
}

.contact textarea {
    border-radius: 5px;
    border: 1px solid #bebebe;
    padding: .5rem;
}

.contact button[type="submit"] {
    padding: .5rem 2rem;
    font-size: 1rem;
    background-color: var(--primary-color);
    color: white;
    border: none;
    border-radius: 5px;
    cursor: pointer;
}

.contact button[type="submit"]:hover {
    background-color: var(--accent1-color);
}

.contact .find-us {
    text-align: center;
    display: flex;
    flex-direction: column;
    gap: 24px;
}

.contact .find-us > div {
    display: flex;
    gap: 2rem;
    justify-content: space-between;
    text-align: left;
}

.contact .find-us .info {
    display: flex;
    flex-direction: column;
    gap: 1rem;
}

.contact .find-us .map iframe {
    border: none;
}

.trips h1, .trips h2 {
    text-align: center;
}

.trips .trip {
    display: flex;
    flex-direction: column;
    gap: 2rem;
}

.trips .trips-container {
    display: flex;
    flex-wrap: wrap;
    gap: 50px;
    justify-content: center;
}

.trips .card {
    max-width: 400px;
    border-radius: 8px;
    box-shadow: 5px 5px 20px 0px #c7c7c7;
}

.trips .card div {
    width: 100%;
}

.trips .card div img {
    width: 100%;
    object-fit: contain;
    border-radius: 8px 8px 0 0;
}

.trips .card h3, .trips .card p {
    margin: 1rem;
    text-align: center;
}

.details {
    display: flex;
    flex-direction: column;
    gap: 2rem;
}

.cta {
    display: flex;
    flex-direction: column;
    gap: 2rem;
}

.cta .cta-container {
    display: flex;
    flex-direction: column;
    gap: 2rem;
    justify-content: center;
    border: 2px solid var(--primary-color);
    border-radius: 8px;
    padding: 3rem;
    text-align: center;
}

.cta .btn {
    padding: 8px 15px;
    background-color: var(--primary-color);
    color: #fff;
    border: none;
    border-radius: 5px;
    align-self: center;
}

table {
    border-collapse: collapse;
    width: 100%;
}

table td, table th {
    border: 1px solid gray;
    padding: 8px 15px;
}

table tbody tr:nth-child(odd) {
    background-color: #f2f2f2;
}

footer {
    display: grid;
    grid-template-columns: 1fr 4fr 1fr;
    padding: 1rem;
    margin-top: 2rem;
    background-color: var(--accent1-color);
    align-items: center;
    color: #fff;
}

footer p {
    text-align: center;
    grid-column: 2 / 3;
}

footer nav {
    grid-column: 3 / 4;
    display: flex;
    align-items: center;
}

footer nav img {
    display: flex;
    align-items: center;
}

footer .wireframe {
    color: white;
}

